[package]
name = "ssandbox"
version = "0.1.0"
edition = "2024"

[dependencies]
tempdir = "0.3.7"
anyhow = "1.0.100"
fork = "0.7.0"
rlimit = "0.11.0"
nix = { version = "0.31.1", features = ["signal", "process", "fs", "sched", "mount", "user"] }
memfd = "0.6.5"
extrasafe = "0.5.1"
uuid = { version = "1.21.0", features = ["v4"] }
clap = { version = "4.6.0", features = ["derive"] }
fs_extra = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "2.0.18"
